# C11

./: .gitignore  pyproject.toml
src/c11/aulas/: Aula1.ipynb
src/c11/aulas/Exercicio_aula/: exercicio.ipynb
src/c11/aulas/cap3/: Aula1.ipynb
src/c11/aulas/cap4_numpy/: Aula_numpy.ipynb  aula.py
src/c11/aulas/cap4_numpy/Exercicio_aula/: exercicio.ipynb
src/c11/aulas/cap5_pandas/: aula_04_09.ipynb  paises2.csv
src/c11/aulas/cap6_matplotlib/: aula_18_09.ipynb  exercicio_matplot.ipynb
src/c11/exercicios_lab/cap4_numpy/: exercicio3.py  exercicios.ipynb  part1.ipynb
src/c11/exercicios_lab/cap_2/: Untitled.ipynb  part_1.py  part_2.py
src/c11/exercicios_lab/cap_3/: exercicios.py
src/c11/exercicios_lab/cap_5_pandas/: exercicio.ipynb  noCoast.csv
src/c11/prova/: prova.ipynb
